tests/cases/compiler/unusedTypeDeclarations.ts
// @noUnusedLocals: true

type T1 = number;  // error
type _T2 = number; // ok

export {};
